Update trial and payment structure - require credit card for 15-day trial, 50% off first month then full rate, add payment methods (CashApp, Apple Pay, Google Pay, PayPal) with icons and security badge

--- a/public/index.html
+++ b/public/index.html
@@ -288,10 +288,24 @@
                         </div>
                     </div>
 
+                    <div class="payment-methods-info">
+                        <p>We accept:</p>
+                        <div class="payment-icons">
+                            <i class="fab fa-cc-visa" title="Visa"></i>
+                            <i class="fab fa-cc-mastercard" title="Mastercard"></i>
+                            <i class="fab fa-cc-amex" title="American Express"></i>
+                            <i class="fab fa-cc-discover" title="Discover"></i>
+                            <i class="fab fa-cc-paypal" title="PayPal"></i>
+                            <i class="fab fa-cc-apple-pay" title="Apple Pay"></i>
+                            <i class="fab fa-google-pay" title="Google Pay"></i>
+                            <i class="fas fa-dollar-sign" title="Cash App"></i>
+                        </div>
+                        <p class="payment-security"><i class="fas fa-lock"></i> Secure payments powered by Stripe</p>
+                    </div>
+
                     <div class="subscription-plans">
                         <!-- Monthly Plans -->
-                        <div class="plan-card starter">
-                            <div class="billing-period-badge">Monthly</div>
+                        <div class="plan-card starter">\n                            <div class="billing-period-badge">Monthly</div>
                             <h3>Starter</h3>
                             <div class="price">
                                 <span class="amount">$9.99</span>
@@ -303,7 +317,8 @@
                                 <li><i class="fas fa-check"></i> Standard support</li>
                                 <li><i class="fas fa-check"></i> CreatorSync integration</li>
                             </ul>
-                            <button class="btn btn-outline subscribe-btn" data-plan="starter-monthly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-outline subscribe-btn" data-plan="starter-monthly">Start Trial • 50% Off 1st Month</button>
                         </div>
 
                         <div class="plan-card starter">
@@ -320,7 +335,8 @@
                                 <li><i class="fas fa-check"></i> Standard support</li>
                                 <li><i class="fas fa-check"></i> CreatorSync integration</li>
                             </ul>
-                            <button class="btn btn-outline subscribe-btn" data-plan="starter-yearly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-outline subscribe-btn" data-plan="starter-yearly">Start Trial • 50% Off 1st Month</button>
                         </div>
 
                         <div class="plan-card pro featured">
@@ -339,7 +355,8 @@
                                 <li><i class="fas fa-check"></i> Analytics dashboard</li>
                                 <li><i class="fas fa-check"></i> Revenue sharing benefits</li>
                             </ul>
-                            <button class="btn btn-primary subscribe-btn" data-plan="pro-monthly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-primary subscribe-btn" data-plan="pro-monthly">Start Trial • 50% Off 1st Month</button>
                         </div>
 
                         <div class="plan-card pro">
@@ -359,7 +376,8 @@
                                 <li><i class="fas fa-check"></i> Revenue sharing benefits</li>
                                 <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
-                            <button class="btn btn-primary subscribe-btn" data-plan="pro-yearly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-primary subscribe-btn" data-plan="pro-yearly">Start Trial • 50% Off 1st Month</button>
                         </div>
 
                         <div class="plan-card enterprise">
@@ -378,7 +396,8 @@
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
                                 <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
-                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Start Trial • 50% Off 1st Month</button>
                         </div>
 
                         <div class="plan-card enterprise">
@@ -398,7 +417,8 @@
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
                                 <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
-                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Start Free Trial</button>
+                            <div class="trial-badge">15-Day Free Trial</div>
+                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Start Trial • 50% Off 1st Month</button>
                         </div>
                     </div>
                 </div>
@@ -487,7 +507,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>CreatorSync offers multiple tiers: <strong>Starter</strong> ($9.99/month or $7.99/month yearly), <strong>Pro</strong> ($29.99/month or $23.99/month yearly) with MixMaster1 access, and <strong>Enterprise</strong> ($99.99/month or $79.99/month yearly) with all premium features. All plans include a free trial.</p>
+                        <p>CreatorSync offers multiple tiers: <strong>Starter</strong> ($9.99/month or $7.99/month yearly), <strong>Pro</strong> ($29.99/month or $23.99/month yearly) with MixMaster1 access, and <strong>Enterprise</strong> ($99.99/month or $79.99/month yearly) with all premium features. All plans include a 15-day free trial, then 50% off the first month, followed by full pricing.</p>
                     </div>
                 </div>
 
@@ -557,7 +577,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Yes! All subscription tiers (Starter, Pro, and Enterprise) include a <strong>free trial period</strong> so you can explore all features before committing. No credit card required for the trial. Cancel anytime during the trial with no charges.</p>
+                        <p>Yes! All subscription tiers include a <strong>15-day free trial</strong>. A credit/debit card is required to start your trial. After the trial, you'll be charged <strong>50% off</strong> for the first month, then full price thereafter. Cancel anytime during the trial period with no charges.</p>
                     </div>
                 </div>
 
@@ -568,6 +588,16 @@
                     </button>
                     <div class="faq-answer">
                         <p>CreatorSync is available in <strong>7 languages</strong>: English, Spanish (Español), French (Français), German (Deutsch), Japanese (日本語), Chinese (中文), and Russian (Русский). Switch languages anytime using the selector in the navigation bar.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What payment methods do you accept?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>We accept multiple payment methods for your convenience: <strong>Credit/Debit Cards</strong> (Visa, Mastercard, American Express, Discover), <strong>PayPal</strong>, <strong>Apple Pay</strong>, <strong>Google Pay</strong>, and <strong>Cash App</strong>. All payments are processed securely through Stripe with enterprise-grade encryption.</p>
                     </div>
                 </div>
             </div>
@@ -832,7 +862,7 @@
                         </div>
                         <div class="trial-info">
                             <i class="fas fa-gift"></i>
-                            <p>Start with a <strong>14-day free trial</strong>. Cancel anytime.</p>
+                            <p><strong>15-day free trial</strong> • Then 50% off first month • Credit card required</p>
                         </div>
                         <button type="submit" class="btn btn-primary btn-full btn-lg">Start Free Trial</button>
                     </form>
