Add Chime and One Card as payment options - include icons in payment methods section and update FAQ

--- a/public/index.html
+++ b/public/index.html
@@ -299,6 +299,8 @@
                             <i class="fab fa-cc-apple-pay" title="Apple Pay"></i>
                             <i class="fab fa-google-pay" title="Google Pay"></i>
                             <i class="fas fa-dollar-sign" title="Cash App"></i>
+                            <i class="fas fa-credit-card" title="Chime"></i>
+                            <i class="fas fa-wallet" title="One Card"></i>
                         </div>
                         <p class="payment-security"><i class="fas fa-lock"></i> Secure payments powered by Stripe</p>
                     </div>
@@ -597,7 +599,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>We accept multiple payment methods for your convenience: <strong>Credit/Debit Cards</strong> (Visa, Mastercard, American Express, Discover), <strong>PayPal</strong>, <strong>Apple Pay</strong>, <strong>Google Pay</strong>, and <strong>Cash App</strong>. All payments are processed securely through Stripe with enterprise-grade encryption.</p>
+                        <p>We accept multiple payment methods for your convenience: <strong>Credit/Debit Cards</strong> (Visa, Mastercard, American Express, Discover), <strong>PayPal</strong>, <strong>Apple Pay</strong>, <strong>Google Pay</strong>, <strong>Cash App</strong>, <strong>Chime</strong>, and <strong>One Card</strong>. All payments are processed securely through Stripe with enterprise-grade encryption.</p>
                     </div>
                 </div>
             </div>
