Fix navigation card icons visibility - keep icons visible after page load by removing transparent text-fill from container, and update nav links to point to correct sections (featured, collaboration, subscription, finisher-app, mixmaster1-app)

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="nav-menu-carousel">
-                    <a href="#beats" class="nav-card" data-translate="nav.beats">
+                    <a href="#featured" class="nav-card" data-translate="nav.beats">
                         <div class="nav-card-icon">
                             <i class="fas fa-compact-disc"></i>
                         </div>
@@ -34,7 +34,7 @@
                             <p>Exclusive instrumentals</p>
                         </div>
                     </a>
-                    <a href="#sounds" class="nav-card" data-translate="nav.sounds">
+                    <a href="#featured" class="nav-card" data-translate="nav.sounds">
                         <div class="nav-card-icon">
                             <i class="fas fa-layer-group"></i>
                         </div>
@@ -43,7 +43,7 @@
                             <p>Professional samples & loops</p>
                         </div>
                     </a>
-                    <a href="#studio" class="nav-card" data-translate="nav.studio">
+                    <a href="#collaboration" class="nav-card" data-translate="nav.studio">
                         <div class="nav-card-icon">
                             <i class="fas fa-sliders-h"></i>
                         </div>
@@ -52,7 +52,7 @@
                             <p>Mix, master & collaborate live</p>
                         </div>
                     </a>
-                    <a href="#marketplace" class="nav-card" data-translate="nav.marketplace">
+                    <a href="#subscription" class="nav-card" data-translate="nav.marketplace">
                         <div class="nav-card-icon">
                             <i class="fas fa-shopping-cart"></i>
                         </div>
@@ -70,7 +70,7 @@
                             <p>Professional mixing suite</p>
                         </div>
                     </a>
-                    <a href="#finisher" class="nav-card nav-card-premium" id="finisherNavLink" data-translate="nav.finisher">
+                    <a href="finisher-app.html" class="nav-card nav-card-premium" id="finisherNavLink" data-translate="nav.finisher">
                         <div class="nav-card-icon finisher-logo-container">
                             <img src="assets/finisher-logo.png" alt="The Finisher" class="finisher-logo logo-glow interactive-logo">
                         </div>
