Add prominent value statement section - highlight all-in-one platform where users can create, record, collaborate, sell, publish, share, and distribute without leaving the platform. Includes 6 key features with icons and hover animations

--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,47 @@
         </div>
     </section>
 
+    <!-- All-In-One Platform Value Statement -->
+    <section class="value-statement-section">
+        <div class="container">
+            <div class="value-statement-card">
+                <div class="value-icon">
+                    <i class="fas fa-infinity"></i>
+                </div>
+                <h2>Everything You Need. One Platform.</h2>
+                <p class="value-description">
+                    <strong>Never leave the platform.</strong> Record, mix, collaborate, publish, share, and distribute your work — all in one place. From creation to monetization, CreatorSync is your complete music production ecosystem.
+                </p>
+                <div class="value-features">
+                    <div class="value-feature-item">
+                        <i class="fas fa-music"></i>
+                        <span>Create & Record</span>
+                    </div>
+                    <div class="value-feature-item">
+                        <i class="fas fa-users"></i>
+                        <span>Collaborate Live</span>
+                    </div>
+                    <div class="value-feature-item">
+                        <i class="fas fa-store"></i>
+                        <span>Sell & License</span>
+                    </div>
+                    <div class="value-feature-item">
+                        <i class="fas fa-share-alt"></i>
+                        <span>Share & Publish</span>
+                    </div>
+                    <div class="value-feature-item">
+                        <i class="fas fa-globe"></i>
+                        <span>Distribute Worldwide</span>
+                    </div>
+                    <div class="value-feature-item">
+                        <i class="fas fa-chart-line"></i>
+                        <span>Track Analytics</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Featured Beats -->
     <section class="featured-section">
         <div class="container">
