--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@
                                 <li><i class="fas fa-check"></i> Advanced collaboration tools</li>
                                 <li><i class="fas fa-check"></i> Analytics dashboard</li>
                                 <li><i class="fas fa-check"></i> Revenue sharing benefits</li>
-                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
+                                <li><i class="fas fa-check plan-check-icon"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <div class="trial-badge">15-Day Free Trial</div>
                             <button class="btn btn-primary subscribe-btn" data-plan="pro-yearly">Start Trial • 50% Off 1st Month</button>
@@ -437,7 +437,7 @@
                                 <li><i class="fas fa-check"></i> White-label solutions</li>
                                 <li><i class="fas fa-check"></i> Custom integrations</li>
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
-                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
+                                <li><i class="fas fa-check plan-check-icon"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <div class="trial-badge">15-Day Free Trial</div>
                             <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Start Trial • 50% Off 1st Month</button>
@@ -458,7 +458,7 @@
                                 <li><i class="fas fa-check"></i> White-label solutions</li>
                                 <li><i class="fas fa-check"></i> Custom integrations</li>
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
-                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
+                                <li><i class="fas fa-check plan-check-icon"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <div class="trial-badge">15-Day Free Trial</div>
                             <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Start Trial • 50% Off 1st Month</button>
@@ -718,8 +718,7 @@
                         <i class="fas fa-share-alt"></i>
                         <span>Share Your Work</span>
                     </button>
-                        <li><a href="#analytics">Analytics</a></li>
-                    </ul>
+                    </div>
                 </div>
 
                 <div class="footer-section">
