--- a/public/finisher-app.html
+++ b/public/finisher-app.html
@@ -26,10 +26,7 @@
         </div>
 
         <div class="nav-center">
-            <div class="subscription-status" id="subscriptionStatus">
-                <span class="status-badge" id="statusBadge">PRO</span>
-                <span id="planName">Pro Plan</span>
-            </div>
+            <!-- Subscription status removed for cleaner UI -->
         </div>
 
         <div class="nav-right">
