Update navigation card icons - drum for Beats, music note for Sounds, headphones for Studio, users for Marketplace

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <div class="nav-menu-carousel">
                     <a href="#featured" class="nav-card" data-translate="nav.beats">
                         <div class="nav-card-icon">
-                            <i class="fas fa-compact-disc"></i>
+                            <i class="fas fa-drum"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Beats</h3>
@@ -36,7 +36,7 @@
                     </a>
                     <a href="#featured" class="nav-card" data-translate="nav.sounds">
                         <div class="nav-card-icon">
-                            <i class="fas fa-layer-group"></i>
+                            <i class="fas fa-music"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Sound Packs</h3>
@@ -45,7 +45,7 @@
                     </a>
                     <a href="#collaboration" class="nav-card" data-translate="nav.studio">
                         <div class="nav-card-icon">
-                            <i class="fas fa-sliders-h"></i>
+                            <i class="fas fa-headphones-alt"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Create Studio</h3>
@@ -54,7 +54,7 @@
                     </a>
                     <a href="#subscription" class="nav-card" data-translate="nav.marketplace">
                         <div class="nav-card-icon">
-                            <i class="fas fa-shopping-cart"></i>
+                            <i class="fas fa-users"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Marketplace</h3>
