--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>
                 <div class="nav-menu-carousel">
-                    <a href="#featured" class="nav-card" data-translate="nav.beats">
+                    <a href="#featured" class="nav-card">
                         <div class="nav-card-icon">
                             <i class="fas fa-drum"></i>
                         </div>
@@ -34,7 +34,7 @@
                             <p>Exclusive instrumentals</p>
                         </div>
                     </a>
-                    <a href="#featured" class="nav-card" data-translate="nav.sounds">
+                    <a href="#featured" class="nav-card">
                         <div class="nav-card-icon">
                             <i class="fas fa-music"></i>
                         </div>
@@ -43,7 +43,7 @@
                             <p>Professional samples & loops</p>
                         </div>
                     </a>
-                    <a href="#collaboration" class="nav-card" data-translate="nav.studio">
+                    <a href="#collaboration" class="nav-card">
                         <div class="nav-card-icon">
                             <i class="fas fa-headphones-alt"></i>
                         </div>
@@ -52,7 +52,7 @@
                             <p>Mix, master & collaborate live</p>
                         </div>
                     </a>
-                    <a href="#subscription" class="nav-card" data-translate="nav.marketplace">
+                    <a href="#subscription" class="nav-card">
                         <div class="nav-card-icon">
                             <i class="fas fa-users"></i>
                         </div>
@@ -61,7 +61,7 @@
                             <p>Buy & sell exclusive beats</p>
                         </div>
                     </a>
-                    <a href="mixmaster1-app.html" class="nav-card nav-card-premium" id="mixmasterNavLink" data-translate="nav.mixmaster">
+                    <a href="mixmaster1-app.html" class="nav-card nav-card-premium" id="mixmasterNavLink">
                         <div class="nav-card-icon">
                             <img src="assets/mixmaster1-logo.png" alt="MixMaster1" class="mixmaster-logo logo-glow interactive-logo">
                         </div>
@@ -70,7 +70,7 @@
                             <p>Professional mixing suite</p>
                         </div>
                     </a>
-                    <a href="finisher-app.html" class="nav-card nav-card-premium" id="finisherNavLink" data-translate="nav.finisher">
+                    <a href="finisher-app.html" class="nav-card nav-card-premium" id="finisherNavLink">
                         <div class="nav-card-icon finisher-logo-container">
                             <img src="assets/finisher-logo.png" alt="The Finisher" class="finisher-logo logo-glow interactive-logo">
                         </div>
