Phase 1 Complete: Beat Maker Core Features
- Added sample seeding utility with 40+ drum/bass/synth samples
- Integrated beat maker into main navigation with NEW badge
- Organized samples into packs (Starter, Trap, EDM Pro)
- Premium/free sample tier system
- All Phase 1 objectives completed:
  ✓ Backend models & API routes
  ✓ Frontend UI with Web Audio engine
  ✓ Step sequencer functionality
  ✓ 8-track mixer with controls
- Ready for Phase 2 development

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,15 @@
                             <p>Mix, master & collaborate live</p>
                         </div>
                     </a>
+                    <a href="beat-maker.html" class="nav-card nav-card-featured">
+                        <div class="nav-card-icon">
+                            <i class="fas fa-sliders-h"></i>
+                        </div>
+                        <div class="nav-card-content">
+                            <h3><span class="new-badge">NEW</span> Beat Maker</h3>
+                            <p>Create beats in your browser</p>
+                        </div>
+                    </a>
                     <a href="#subscription" class="nav-card">
                         <div class="nav-card-icon">
                             <i class="fas fa-users"></i>
