chore(lint): apply top lint fixes across front-end and server

--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,13 @@
                             <p>Mix, master & collaborate live</p>
                         </div>
                     </a>
-                    <a href="beat-maker.html" class="nav-card nav-card-featured">
+                    <a href="beat-forge.html" class="nav-card nav-card-featured">
                         <div class="nav-card-icon">
-                            <i class="fas fa-sliders-h"></i>
+                            <img src="assets/beatforge-logo.png" alt="BeatForge" class="beatforge-logo logo-glow interactive-logo" style="height: 40px; width: auto;">
                         </div>
                         <div class="nav-card-content">
-                            <h3><span class="new-badge">NEW</span> Beat Maker</h3>
-                            <p>Create beats in your browser</p>
+                            <h3><span class="new-badge">NEW</span> BeatForge</h3>
+                            <p>Forge beats in your browser</p>
                         </div>
                     </a>
                     <a href="#subscription" class="nav-card">
@@ -70,13 +70,13 @@
                             <p>Buy & sell exclusive beats</p>
                         </div>
                     </a>
-                    <a href="mixmaster1-app.html" class="nav-card nav-card-premium" id="mixmasterNavLink">
+                    <a href="mixmaster1-pro.html" class="nav-card nav-card-premium" id="mixmasterNavLink">
                         <div class="nav-card-icon">
-                            <img src="assets/mixmaster1-logo.png" alt="MixMaster1" class="mixmaster-logo logo-glow interactive-logo">
+                            <img src="assets/mixmaster1-logo.png" alt="MixMaster1 Pro" class="mixmaster-logo logo-glow interactive-logo">
                         </div>
                         <div class="nav-card-content">
-                            <h3><span class="pro-badge">PRO+</span> MixMaster1</h3>
-                            <p>Professional mixing suite</p>
+                            <h3><span class="pro-badge">PRO+</span> MixMaster1 Pro</h3>
+                            <p>Rival industry-standard DAWs</p>
                         </div>
                     </a>
                     <a href="finisher-app.html" class="nav-card nav-card-premium" id="finisherNavLink">
