feat: enhance UI with vibrant colors and BeatForge branding
- Add vibrant color palette with neon accents to style.css
- Enhance background gradients with multiple radial gradient layers
- Improve section backgrounds with richer colors (40-50% opacity)
- Update BeatForge branding throughout the application
- Add BeatForge logo to navigation with gradient effects
- Update all references from 'Beat Maker' to 'BeatForge'
- Add data manifests for organized audio library (samples and beats)
- Add scripts for audio file organization and metadata generation

--- a/public/beat-maker.html
+++ b/public/beat-maker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beat Maker - CreatorSync</title>
+    <title>BeatForge - CreatorSync</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/beat-maker.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -14,7 +14,8 @@
         <nav class="beat-maker-nav">
             <div class="nav-left">
                 <a href="index.html" class="logo">
-                    <i class="fas fa-music"></i> CreatorSync
+                    <img src="assets/beatforge-logo.png" alt="BeatForge" style="height: 32px; margin-right: 0.5rem;">
+                    <span style="font-size: 1.2rem; font-weight: 700; background: linear-gradient(135deg, #6c5ce7, #00b894); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">BeatForge</span>
                 </a>
                 <h1 class="project-title" contenteditable="true" id="projectTitle">Untitled Project</h1>
             </div>
