feat: add BeatForge logo to main page navigation and bypass Finisher login in testing mode

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,10 @@
                     </a>
                     <a href="beat-maker.html" class="nav-card nav-card-featured">
                         <div class="nav-card-icon">
-                            <i class="fas fa-sliders-h"></i>
+                            <img src="assets/beatforge-logo.png" alt="BeatForge" class="beatforge-logo logo-glow interactive-logo" style="height: 32px;">
                         </div>
                         <div class="nav-card-content">
-                            <h3><span class="new-badge">NEW</span> Beat Maker</h3>
+                            <h3><span class="new-badge">NEW</span> BeatForge</h3>
                             <p>Create beats in your browser</p>
                         </div>
                     </a>
