--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     </a>
                     <a href="beat-maker.html" class="nav-card nav-card-featured">
                         <div class="nav-card-icon">
-                            <img src="assets/beatforge-logo.png" alt="BeatForge" class="beatforge-logo logo-glow interactive-logo" style="height: 32px;">
+                            <img src="assets/beatforge-logo.png?v=2" alt="BeatForge" class="beatforge-logo logo-glow interactive-logo" style="height: 32px;">
                         </div>
                         <div class="nav-card-content">
                             <h3><span class="new-badge">NEW</span> BeatForge</h3>
